# sbt-slicer

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap-dg.sh
src/: CMakeLists.txt  git-version.h.in  llvm-slicer-opts.cpp  llvm-slicer.cpp  llvm-slicer.h  sbt-slicer.cpp
